# consultation-sns

./: Cargo.toml  README.md  h origin wotermt
app/pages/: 404.html  index.html
app/pages/article/: index.html  search.html
app/pages/consultation/: index.html  post.html
app/pages/experience/: index.html  post.html
app/pages/user/: create.html  index.html  login.html
app/script/: app.js  index.js
app/script/user/: create.js  index.js  login.js
app/style/: global.css
app/style/user/: create.css
migrations/: 20240326061154_migrate.sql
src/: article.rs  comment.rs  main.rs  types.rs  user.rs
