[package]
name = "consultation-sns"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] } # "rt-multi-thread",
redis = { version = "0.25.3", features = ["tokio-native-tls-comp"] }
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
serde = { version = "1.0.194", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "std",
  "env-filter",
  "time",
  "local-time",
] }
urlencoding = "2.1.3"
